Fix heading and paragraph spacing

--- a/main.css
+++ b/main.css
@@ -24,11 +24,11 @@ h1, h2, h3, h4, h5, h6 {
 }
 h1 {
 	font-size: 2rem;
-	margin-top: 2rem;
+	margin-bottom: 1rem;
 }
 h2 {
 	font-size: 1.5rem;
-	margin: 0.75rem 0;
+	margin-bottom: 0.75rem;
 }
 h3 {
 	font-size: 1.2rem;
@@ -198,7 +198,8 @@ img {
 	padding: 0 6rem 0 2rem;
 	color: #fffeff;
 }
-.profileIntro:after {
+.profileIntro:after,
+.profileIntro:before {
 	content:"";
 	display: block;
 	height:0;
@@ -208,6 +209,7 @@ img {
 	font-size: 3rem;
 	font-weight: 300;
 	margin-top: 4rem;
+	margin-bottom: 0;
 }
 .profileLinks {
 	padding: 0 2rem 1rem 2rem;
@@ -254,17 +256,15 @@ img {
 	padding:0 2.5em 2em 2.5em;
 	background:#FFFFFF;
 }
-.contribution p{
+.contribution p {
 	padding-bottom: 1em;
 	border-bottom: 1px solid #E0E0E0;
 }
 .contribution h1 {
-	margin-top:0;
-	padding-top:2em;
-	padding-bottom:1em;
-	font-size: 2em;
-	text-align:center;
-	color:#EA37B9;
+	padding-top: 1.5em;
+	padding-bottom: 1em;
+	text-align: center;
+	color: #e639b7;
 }
 .contribution h3{
 	font-weight: 500;
@@ -321,7 +321,7 @@ img {
 .gratitude h1{
 	padding-top:2em;
 	font-size: 2em;
-	color:#EA37B9;
+	color:#e639b7;
 }
 .fl-github,.tip,.fl-twitter{
 	position:relative;
@@ -734,9 +734,11 @@ img {
 .articlesContainer h1,
 .commentsContainer h1 {
 	padding-left: 1.4em;
+	margin-bottom: 0;
 }
 .tweetsContainer h1 {
 	padding-left: 1em;
+	margin-bottom: 0;
 }
 .loadMore a,
 .loadMore a,
@@ -807,6 +809,7 @@ img {
 }
 .tweetText p {
 	font-size: 0.875em;
+	margin-bottom: 0;
 }
 .tweetMention {
 	color: #3893e4;
@@ -847,6 +850,7 @@ img {
 .comment p {
 	line-height: 1.4;
 	font-size: 0.9375em;
+	margin-bottom: 0;
 }
 .comments::-webkit-scrollbar,
 .tweets::-webkit-scrollbar,
